--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <h1><center>GROUP 11</h1>
     <h2>GROUP MEMBERS</h2>
-    <h3>AGASTYA SINGH - 2029142 :-   <a href="./index.html">  Try Catch </a></h3>
+    <h3>AGASTYA SINGH - 2029142 :-   <a href="./Agastya.html">  Try Catch </a></h3>
     <h3>MANYA KUMAR - 2029128</h3>
     <h3>PRABHAV MISHRA - 2029137</h3>
     <h3>UMANG KUMAR - 2029120  :-     <a href="https://umangkumar29.github.io/wtproject/">  Throws </a></h3> 
