--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
 <html>
-  <h1><center>GROUP 11</h1>
-    <h2>GROUP MEMBERS</h2>
-    <h3>AGASTYA SINGH - 2029142 :-   <a href="./Agastya.html">  Try Catch </a></h3>
-    <h3>MANYA KUMAR - 2029128</h3>
-    <h3>PRABHAV MISHRA - 2029137</h3>
-    <h3>UMANG KUMAR - 2029120  :-     <a href="https://umangkumar29.github.io/wtproject/">  Throws </a></h3> 
-    <h3>AYUSH RAJ SHARMA - 2029135</h3>
+    <head>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <div class="main_home">
+
+
+    <section id="section1">
+    <div class="home"><h1>Group 11</h1>
+    <div class="team">
+       <div class="team_member">
+                        <h4>Agastya Singh</h4>
+                        <p class="roll">2029142</p> 
+                        <a href="./Agastya.html">  Try Catch </a>
+                    </div>
+                    <div class="team_member">
+                        <h4>Manya Kumar</h4>
+                        <p class="roll">2029128</p> 
+                        <a href="https://626e9f5df34b1961b8c1a339--lively-pudding-857771.netlify.app/">Finally</a> 
+                    </div>
+                    <div class="team_member">
+                        <h4>Prabhav Mishra</h4>
+                        <p class="roll">2029137</p> 
+                        <a href="https://sensational-basbousa-00fafb.netlify.app/">  Throw </a>
+                    </div>
+                    <div class="team_member">
+                        <h4>Umang Kumar</h4>
+                        <p class="roll">2029128</p> 
+                        <a href="https://umangkumar29.github.io/wtproject/">  Throws </a>
+                    </div>
+                    <div class="team_member">
+                        <h4>Ayush Raj Sharma</h4>
+                        <p class="roll">2029142</p> 
+                        <a href="./Agastya.html">  Try Catch </a>
+                    </div>
+    </div>
+    </div>
+</section>
+</div>
+</body>
 </html>
