--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="team_member">
                         <h4>Ayush Raj Sharma</h4>
                         <p class="roll">2029142</p> 
-                        <a href="./Agastya.html">  Try Catch </a>
+                        <a href="">  User define expection </a>
                     </div>
     </div>
     </div>
