--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="team_member">
                         <h4>Ayush Raj Sharma</h4>
                         <p class="roll">2029135</p> 
-                        <a href="">  User define expection </a>
+                        <a href="https://ayushrajsharma28.github.io/wt-project/">  User define expection </a>
                     </div>
     </div>
     </div>
